--- a/results.html
+++ b/results.html
@@ -13,6 +13,7 @@
         <h2>Voting Results</h2>
         <canvas id="voteChart"></canvas>
         <button id="goBackBtn">Go Back</button>
+        <button id="darkModeToggle" class="dark-mode-btn">&#9728;</button>
         <p id="timerMessage"></p>
     </div>
 
