--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <button class="close">close</button>
         <div class="chat">
             <div class="model">
-                <p>Hi, how can I help you?</p>
+                <p>Hi, how can I help you? , type "list" to get a list of questions you can ask me.</p>
             </div>
             
         </div>
